# CertiQ-Net

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
certiqnet/: __init__.py
certiqnet/adapters/: __init__.py  base.py  channel.py  moe.py  queueing.py  robotics.py
certiqnet/diagnostics/: __init__.py  diagnostics.py  state_bank.py
certiqnet/dispatcher/: __init__.py  certificate.py  config.py  delay_geometry.py  geometry.py  index_model.py  interaction.py  model.py  proposal.py  types.py
certiqnet/experiments/: __init__.py  baseline_runner.py  checkpoint_state.py  factory.py  logging.py  metrics.py  paths.py  pipeline.py  progress.py  runner.py
certiqnet/math/: __init__.py  backbone_params.py  certificate.py  lyapunov.py
certiqnet/models/: __init__.py  backbone.py  baselines.py  certiqnet_p.py  certiqnet_s.py  encoder.py  gate.py  residual.py
certiqnet/simulation/: __init__.py  ctmc.py  differentiable.py  rollout.py
certiqnet/training/: __init__.py  callbacks.py  datamodule.py  lightning_module.py  loss.py  oracle.py  supervision.py
certiqnet/utils/: __init__.py  config_schemas.py  logging.py  platform.py  progress.py
configs/: config.yaml
configs/adapter/: channel.yaml  moe.yaml  queueing.yaml  robotics.yaml
docs/: certiqnet_z2_spec.md  proof_checklist.md  x1.md
notebooks/: 01_lyapunov_geometry.ipynb
requirements/: base.txt
scripts/: audit_state_bank.py  build_queueing_oracle.py  compare_baselines.py  diagnose_gradient_flow.py  diagnose_main_queueing_failure.py  export_results.py  run_experiment.py  sweep.py  train.py
(+97 files in other folders)
