[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certiqnet"
version = "0.1.0"
description = "CertiQ-Net z2 certified differentiable dispatcher"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0,<3.0",
    "pytorch-lightning>=2.5.0,<3.0",
    "torchmetrics>=1.4.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.19.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "einops>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["certiqnet*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["UP017"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"certiqnet/utils/progress.py" = ["ANN401"]
"studies/**/*.py" = ["E402", "UP035", "UP006", "ANN002", "ANN003"]
"certiqnet/utils/config_schemas.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
disable_error_code = ["misc"]
